disable beberapa filed form formulir ppdb

--- a/views/admission/pdf_admission_template.html
+++ b/views/admission/pdf_admission_template.html
@@ -26,7 +26,7 @@
 			<tr>
 				<td colspan="3" align="left"><h3>Registrasi [STUDENT_TYPE]</h3></td>
 			</tr>
-			<tr>
+			<!-- <tr>
 				<td width="35%" align="right">Jenis Pendaftaran</td>
 				<td width="5%" align="center">:</td>
 				<td width="60%" align="left">[IS_TRANSFER]</td>
@@ -35,11 +35,11 @@
 				<td align="right">Jalur Pendaftaran</td>
 				<td align="center">:</td>
 				<td align="left">[ADMISSION_TYPE]</td>
-			</tr>
+			</tr> -->
 			<tr>
-				<td align="right">Nomor Pendaftaran</td>
-				<td align="center">:</td>
-				<td align="left">[REGISTRATION_NUMBER]</td>
+				<td width="35%" align="right">Nomor Pendaftaran</td>
+				<td width="5%"  align="center">:</td>
+				<td width="60%" align="left">[REGISTRATION_NUMBER]</td>
 			</tr>
 			<tr>
 				<td align="right">Tanggal Pendaftaran</td>
@@ -117,11 +117,11 @@
 				<td align="center">:</td>
 				<td align="left">[RW]</td>
 			</tr>
-			<tr>
+			<!-- <tr>
 				<td align="right">Dusun</td>
 				<td align="center">:</td>
 				<td align="left">[SUB_VILLAGE]</td>
-			</tr>
+			</tr> -->
 			<tr>
 				<td align="right">Kelurahan / Desa</td>
 				<td align="center">:</td>
@@ -142,11 +142,11 @@
 				<td align="center">:</td>
 				<td align="left">[POSTAL_CODE]</td>
 			</tr>
-			<tr>
+			<!-- <tr>
 				<td align="right">Email</td>
 				<td align="center">:</td>
 				<td align="left">[EMAIL]</td>
-			</tr>
+			</tr> -->
 			<tr>
 				<td colspan="3"></td>
 			</tr>
