tambah field input (nama sekolah asal)

--- a/views/admission/pdf_admission_template.html
+++ b/views/admission/pdf_admission_template.html
@@ -48,8 +48,8 @@
 			</tr>
 			<tr><td align="right">Pilihan I</td><td align="center">:</td><td align="left">[FIRST_CHOICE]</td></tr>
 			<tr><td align="right">Pilihan II</td><td align="center">:</td><td align="left">[SECOND_CHOICE]</td></tr>
-			<tr><td align="right">Nama Sekolah Asal</td><td align="center">:</td><td align="left">[PREV_SCHOOL_NAME]</td></tr>
-			<tr><td align="right">Alamat Sekolah Asal</td><td align="center">:</td><td align="left">[PREV_SCHOOL_ADDRESS]</td></tr>
+			<!-- <tr><td align="right">Nama Sekolah Asal</td><td align="center">:</td><td align="left">[PREV_SCHOOL_NAME]</td></tr> -->
+			<!-- <tr><td align="right">Alamat Sekolah Asal</td><td align="center">:</td><td align="left">[PREV_SCHOOL_ADDRESS]</td></tr> -->
 			<tr>
 				<td colspan="3"></td>
 			</tr>
@@ -86,6 +86,11 @@
 				<td align="right">Agama</td>
 				<td align="center">:</td>
 				<td align="left">[RELIGION]</td>
+			</tr>
+			<tr>
+				<td align="right">Nama Sekolah Asal</td>
+				<td align="center">:</td>
+				<td align="left">[PREV_SCHOOL_NAME]</td>
 			</tr>
 			<tr>
 				<td align="right">Kebutuhan Khusus</td>
