format cetak formulir PPDB baru

--- a/views/admission/pdf_admission_template.html
+++ b/views/admission/pdf_admission_template.html
@@ -55,7 +55,7 @@
 			</tr>
 			</tbody>
 		</table>
-		<table width="100%" cellpadding="3" cellspacing="0" style="border-bottom:1px solid #a5a5a5;">
+		<table width="100%" cellpadding="3" cellspacing="0" style="border-bottom:2px solid #a5a5a5;">
 			<tbody>
 			<tr >
 				<td colspan="3" align="left"><h3>Biodata [STUDENT_TYPE]</h3></td>
@@ -122,11 +122,11 @@
 				<td align="center">:</td>
 				<td align="left">[RW]</td>
 			</tr>
-			<!-- <tr>
+			<tr>
 				<td align="right">Dusun</td>
 				<td align="center">:</td>
 				<td align="left">[SUB_VILLAGE]</td>
-			</tr> -->
+			</tr>
 			<tr>
 				<td align="right">Kelurahan / Desa</td>
 				<td align="center">:</td>
@@ -147,11 +147,90 @@
 				<td align="center">:</td>
 				<td align="left">[POSTAL_CODE]</td>
 			</tr>
-			<!-- <tr>
+			<tr>
 				<td align="right">Email</td>
 				<td align="center">:</td>
 				<td align="left">[EMAIL]</td>
-			</tr> -->
+			</tr>
+			<tr>
+				<td colspan="3"></td>
+			</tr>
+			</tbody>
+		</table>
+		<table width="100%" border="0" cellpadding="3" cellspacing="0" style="border-bottom:1px solid #a5a5a5; page-break-before: always;">
+			<tbody>
+			<tr>
+				<td colspan="3" align="left"><h3>Registrasi [STUDENT_TYPE]</h3></td>
+			</tr>
+			<tr>
+				<td width="35%" align="right">Nomor Pendaftaran</td>
+				<td width="5%"  align="center">:</td>
+				<td width="60%" align="left">[REGISTRATION_NUMBER]</td>
+			</tr>
+			<tr>
+				<td align="right">Tanggal Pendaftaran</td>
+				<td align="center">:</td>
+				<td align="left">[CREATED_AT]</td>
+			</tr>
+			<tr><td align="right">Pilihan I</td><td align="center">:</td><td align="left">[FIRST_CHOICE]</td></tr>
+			<tr><td align="right">Pilihan II</td><td align="center">:</td><td align="left">[SECOND_CHOICE]</td></tr>
+			<tr style="font-weight:bold;">
+				<td width="35%" align="right"> Username</td>
+				<td width="5%"  align="center">:</td>
+				<td width="60%" align="left">[]</td>
+			</tr>
+			<tr style="font-weight:bold;">
+				<td width="35%" align="right">Password</td>
+				<td width="5%"  align="center">:</td>
+				<td width="60%" align="left">[]</td>
+			</tr>
+			<tr>
+				<td colspan="3"></td>
+			</tr>
+			</tbody>
+		</table>
+		<table width="100%" cellpadding="3" cellspacing="0" style="border-bottom:1px solid #a5a5a5;">
+			<tbody>
+			<tr >
+				<td colspan="3" align="left"><h3>Biodata [STUDENT_TYPE]</h3></td>
+			</tr>
+			<tr>
+				<td width="35%" align="right">Nama Lengkap</td>
+				<td width="5%" align="center">:</td>
+				<td width="60%" align="left">[FULL_NAME]</td>
+			</tr>
+			<tr>
+				<td align="right">Jenis Kelamin</td>
+				<td align="center">:</td>
+				<td align="left">[GENDER]</td>
+			</tr>
+			<tr><td align="right">NISN</td><td align="center">:</td><td align="left">[NISN]</td></tr>
+			<tr><td align="right">NIK</td><td align="center">:</td><td align="left">[NIK]</td></tr>
+			<tr>
+				<td align="right">Tempat Lahir</td>
+				<td align="center">:</td>
+				<td align="left">[BIRTH_PLACE]</td>
+			</tr>
+			<tr>
+				<td align="right">Tanggal Lahir</td>
+				<td align="center">:</td>
+				<td align="left">[BIRTH_DATE]</td>
+			</tr>
+			<tr>
+				<td align="right">Agama</td>
+				<td align="center">:</td>
+				<td align="left">[RELIGION]</td>
+			</tr>
+			<tr>
+				<td align="right">Nama Sekolah Asal</td>
+				<td align="center">:</td>
+				<td align="left">[PREV_SCHOOL_NAME]</td>
+			</tr>
+			<tr>
+				<td align="right">Kebutuhan Khusus</td>
+				<td align="center">:</td>
+				<td align="left">[SPECIAL_NEEDS]</td>
+			</tr>
 			<tr>
 				<td colspan="3"></td>
 			</tr>
