--- a/views/admission/pdf_admission_template.html
+++ b/views/admission/pdf_admission_template.html
@@ -21,146 +21,15 @@
 			</tbody>
 		</table>
 		<h3>[TITLE]</h3>
-		<table width="100%" border="0" cellpadding="3" cellspacing="0" style="border-bottom:1px solid #a5a5a5;">
+		<table width="100%" border="0" cellpadding="3" cellspacing="0" style="border-bottom:1px dashed #a5a5a5; padding-bottom: 20px;">
 			<tbody>
 			<tr>
 				<td colspan="3" align="left"><h3>Registrasi [STUDENT_TYPE]</h3></td>
-			</tr>
-			<!-- <tr>
-				<td width="35%" align="right">Jenis Pendaftaran</td>
-				<td width="5%" align="center">:</td>
-				<td width="60%" align="left">[IS_TRANSFER]</td>
 			</tr>
 			<tr>
 				<td align="right">Jalur Pendaftaran</td>
 				<td align="center">:</td>
 				<td align="left">[ADMISSION_TYPE]</td>
-			</tr> -->
-			<tr>
-				<td width="35%" align="right">Nomor Pendaftaran</td>
-				<td width="5%"  align="center">:</td>
-				<td width="60%" align="left">[REGISTRATION_NUMBER]</td>
-			</tr>
-			<tr>
-				<td align="right">Tanggal Pendaftaran</td>
-				<td align="center">:</td>
-				<td align="left">[CREATED_AT]</td>
-			</tr>
-			<tr><td align="right">Pilihan I</td><td align="center">:</td><td align="left">[FIRST_CHOICE]</td></tr>
-			<tr><td align="right">Pilihan II</td><td align="center">:</td><td align="left">[SECOND_CHOICE]</td></tr>
-			<!-- <tr><td align="right">Nama Sekolah Asal</td><td align="center">:</td><td align="left">[PREV_SCHOOL_NAME]</td></tr> -->
-			<!-- <tr><td align="right">Alamat Sekolah Asal</td><td align="center">:</td><td align="left">[PREV_SCHOOL_ADDRESS]</td></tr> -->
-			<tr>
-				<td colspan="3"></td>
-			</tr>
-			</tbody>
-		</table>
-		<table width="100%" cellpadding="3" cellspacing="0" style="border-bottom:2px solid #a5a5a5;">
-			<tbody>
-			<tr >
-				<td colspan="3" align="left"><h3>Biodata [STUDENT_TYPE]</h3></td>
-			</tr>
-			<tr>
-				<td width="35%" align="right">Nama Lengkap</td>
-				<td width="5%" align="center">:</td>
-				<td width="60%" align="left">[FULL_NAME]</td>
-			</tr>
-			<tr>
-				<td align="right">Jenis Kelamin</td>
-				<td align="center">:</td>
-				<td align="left">[GENDER]</td>
-			</tr>
-			<tr><td align="right">NISN</td><td align="center">:</td><td align="left">[NISN]</td></tr>
-			<tr><td align="right">NIK</td><td align="center">:</td><td align="left">[NIK]</td></tr>
-			<tr>
-				<td align="right">Tempat Lahir</td>
-				<td align="center">:</td>
-				<td align="left">[BIRTH_PLACE]</td>
-			</tr>
-			<tr>
-				<td align="right">Tanggal Lahir</td>
-				<td align="center">:</td>
-				<td align="left">[BIRTH_DATE]</td>
-			</tr>
-			<tr>
-				<td align="right">Agama</td>
-				<td align="center">:</td>
-				<td align="left">[RELIGION]</td>
-			</tr>
-			<tr>
-				<td align="right">Nama Sekolah Asal</td>
-				<td align="center">:</td>
-				<td align="left">[PREV_SCHOOL_NAME]</td>
-			</tr>
-			<tr>
-				<td align="right">Kebutuhan Khusus</td>
-				<td align="center">:</td>
-				<td align="left">[SPECIAL_NEEDS]</td>
-			</tr>
-			<tr>
-				<td colspan="3"></td>
-			</tr>
-			</tbody>
-		</table>
-		<table width="100%" cellpadding="3" cellspacing="0">
-			<tbody>
-			<tr>
-				<td colspan="3" align="left"><h3>Alamat</h3></td>
-			</tr>
-			<tr>
-				<td width="35%" align="right">Alamat Jalan</td>
-				<td width="5%" align="center">:</td>
-				<td width="60%" align="left">[STREET_ADDRESS]</td>
-			</tr>
-			<tr>
-				<td align="right">RT</td>
-				<td align="center">:</td>
-				<td align="left">[RT]</td>
-			</tr>
-			<tr>
-				<td align="right">RW</td>
-				<td align="center">:</td>
-				<td align="left">[RW]</td>
-			</tr>
-			<tr>
-				<td align="right">Dusun</td>
-				<td align="center">:</td>
-				<td align="left">[SUB_VILLAGE]</td>
-			</tr>
-			<tr>
-				<td align="right">Kelurahan / Desa</td>
-				<td align="center">:</td>
-				<td align="left">[VILLAGE]</td>
-			</tr>
-			<tr>
-				<td align="right">Kecamatan</td>
-				<td align="center">:</td>
-				<td align="left">[SUB_DISTRICT]</td>
-			</tr>
-			<tr>
-				<td align="right">Kabupaten</td>
-				<td align="center">:</td>
-				<td align="left">[DISTRICT]</td>
-			</tr>
-			<tr>
-				<td align="right">Kode Pos</td>
-				<td align="center">:</td>
-				<td align="left">[POSTAL_CODE]</td>
-			</tr>
-			<tr>
-				<td align="right">Email</td>
-				<td align="center">:</td>
-				<td align="left">[EMAIL]</td>
-			</tr>
-			<tr>
-				<td colspan="3"></td>
-			</tr>
-			</tbody>
-		</table>
-		<table width="100%" border="0" cellpadding="3" cellspacing="0" style="border-bottom:1px solid #a5a5a5; page-break-before: always;">
-			<tbody>
-			<tr>
-				<td colspan="3" align="left"><h3>Registrasi [STUDENT_TYPE]</h3></td>
 			</tr>
 			<tr>
 				<td width="35%" align="right">Nomor Pendaftaran</td>
@@ -174,68 +43,79 @@
 			</tr>
 			<tr><td align="right">Pilihan I</td><td align="center">:</td><td align="left">[FIRST_CHOICE]</td></tr>
 			<tr><td align="right">Pilihan II</td><td align="center">:</td><td align="left">[SECOND_CHOICE]</td></tr>
-			<tr style="font-weight:bold;">
-				<td width="35%" align="right"> Username</td>
-				<td width="5%"  align="center">:</td>
-				<td width="60%" align="left">[]</td>
-			</tr>
-			<tr style="font-weight:bold;">
-				<td width="35%" align="right">Password</td>
-				<td width="5%"  align="center">:</td>
-				<td width="60%" align="left">[]</td>
-			</tr>
 			<tr>
-				<td colspan="3"></td>
-			</tr>
-			</tbody>
-		</table>
-		<table width="100%" cellpadding="3" cellspacing="0" style="border-bottom:1px solid #a5a5a5;">
-			<tbody>
-			<tr >
-				<td colspan="3" align="left"><h3>Biodata [STUDENT_TYPE]</h3></td>
-			</tr>
+					<td align="right">Nama Lengkap</td>
+					<td align="center">:</td>
+					<td align="left">[FULL_NAME]</td>
+				</tr>
 			<tr>
-				<td width="35%" align="right">Nama Lengkap</td>
-				<td width="5%" align="center">:</td>
-				<td width="60%" align="left">[FULL_NAME]</td>
-			</tr>
 			<tr>
-				<td align="right">Jenis Kelamin</td>
+				<td align="right">Tempat Tanggal Lahir</td>
 				<td align="center">:</td>
-				<td align="left">[GENDER]</td>
+				<td align="left">[BIRTH_PLACE], [BIRTH_DATE]</td>
 			</tr>
 			<tr><td align="right">NISN</td><td align="center">:</td><td align="left">[NISN]</td></tr>
-			<tr><td align="right">NIK</td><td align="center">:</td><td align="left">[NIK]</td></tr>
-			<tr>
-				<td align="right">Tempat Lahir</td>
-				<td align="center">:</td>
-				<td align="left">[BIRTH_PLACE]</td>
-			</tr>
-			<tr>
-				<td align="right">Tanggal Lahir</td>
-				<td align="center">:</td>
-				<td align="left">[BIRTH_DATE]</td>
-			</tr>
-			<tr>
-				<td align="right">Agama</td>
-				<td align="center">:</td>
-				<td align="left">[RELIGION]</td>
-			</tr>
 			<tr>
 				<td align="right">Nama Sekolah Asal</td>
 				<td align="center">:</td>
 				<td align="left">[PREV_SCHOOL_NAME]</td>
 			</tr>
 			<tr>
-				<td align="right">Kebutuhan Khusus</td>
-				<td align="center">:</td>
-				<td align="left">[SPECIAL_NEEDS]</td>
-			</tr>
-			<tr>
 				<td colspan="3"></td>
 			</tr>
 			</tbody>
 		</table>
+		<table width="100%" border="0" cellpadding="3" cellspacing="0" style="padding-top: 50px;">
+				<tbody>
+				<tr>
+					<td align="right">Jalur Pendaftaran</td>
+					<td align="center">:</td>
+					<td align="left">[ADMISSION_TYPE]</td>
+				</tr>
+				<tr>
+					<td width="35%" align="right">Nomor Pendaftaran</td>
+					<td width="5%"  align="center">:</td>
+					<td width="60%" align="left">[REGISTRATION_NUMBER]</td>
+				</tr>
+				<tr>
+					<td align="right">Tanggal Pendaftaran</td>
+					<td align="center">:</td>
+					<td align="left">[CREATED_AT]</td>
+				</tr>
+				<tr><td align="right">Pilihan I</td><td align="center">:</td><td align="left">[FIRST_CHOICE]</td></tr>
+				<tr><td align="right">Pilihan II</td><td align="center">:</td><td align="left">[SECOND_CHOICE]</td></tr>
+				<tr>
+						<td align="right">Nama Lengkap</td>
+						<td align="center">:</td>
+						<td align="left">[FULL_NAME]</td>
+					</tr>
+				<tr>
+				<tr>
+					<td align="right">Tempat Tanggal Lahir</td>
+					<td align="center">:</td>
+					<td align="left">[BIRTH_PLACE], [BIRTH_DATE]</td>
+				</tr>
+				<tr><td align="right">NISN</td><td align="center">:</td><td align="left">[NISN]</td></tr>
+				<tr>
+					<td align="right">Nama Sekolah Asal</td>
+					<td align="center">:</td>
+					<td align="left">[PREV_SCHOOL_NAME]</td>
+				</tr>
+				<tr style="font-weight:bold; border: 1px solid #000000">
+					<td width="35%" align="right"> Username</td>
+					<td width="5%"  align="center">:</td>
+					<td width="60%" align="left">[]</td>
+				</tr>
+				<tr style="font-weight:bold;">
+					<td width="35%" align="right">Password</td>
+					<td width="5%"  align="center">:</td>
+					<td width="60%" align="left">[]</td>
+				</tr>
+				<tr>
+					<td colspan="3"></td>
+				</tr>
+				</tbody>
+			</table>
 		<table width="100%" cellpadding="3" cellspacing="0" border="0">
 			<tbody>
 			<tr>
