tambah fitur nilai UN & fix view pdf dan excel

--- a/views/admission/pdf_admission_template.html
+++ b/views/admission/pdf_admission_template.html
@@ -21,15 +21,10 @@
 			</tbody>
 		</table>
 		<h3>[TITLE]</h3>
-		<table width="100%" border="0" cellpadding="3" cellspacing="0" style="border-bottom:1px dashed #a5a5a5; padding-bottom: 20px;">
+		<table width="100%" border="0" cellpadding="3" cellspacing="0" style="border-bottom:1px dashed #a5a5a5;">
 			<tbody>
 			<tr>
 				<td colspan="3" align="left"><h3>Registrasi [STUDENT_TYPE]</h3></td>
-			</tr>
-			<tr>
-				<td align="right">Jalur Pendaftaran</td>
-				<td align="center">:</td>
-				<td align="left">[ADMISSION_TYPE]</td>
 			</tr>
 			<tr>
 				<td width="35%" align="right">Nomor Pendaftaran</td>
@@ -44,11 +39,58 @@
 			<tr><td align="right">Pilihan I</td><td align="center">:</td><td align="left">[FIRST_CHOICE]</td></tr>
 			<tr><td align="right">Pilihan II</td><td align="center">:</td><td align="left">[SECOND_CHOICE]</td></tr>
 			<tr>
-					<td align="right">Nama Lengkap</td>
-					<td align="center">:</td>
-					<td align="left">[FULL_NAME]</td>
-				</tr>
+				<td align="right">Nama Lengkap</td>
+				<td align="center">:</td>
+				<td align="left">[FULL_NAME]</td>
+			</tr>
 			<tr>
+				<td align="right">Tempat Tanggal Lahir</td>
+				<td align="center">:</td>
+				<td align="left">[BIRTH_PLACE], [BIRTH_DATE]</td>
+			</tr>
+			<tr><td align="right">NISN</td><td align="center">:</td><td align="left">[NISN]</td></tr>
+			<tr>
+				<td align="right">Nama Sekolah Asal</td>
+				<td align="center">:</td>
+				<td align="left">[PREV_SCHOOL_NAME]</td>
+			</tr>
+			<tr style="font-weight:bold; border: 1px solid #000000">
+				<td width="35%" align="right"> Username</td>
+				<td width="5%"  align="center">:</td>
+				<td width="60%" align="left"></td>
+			</tr>
+			<tr style="font-weight:bold;">
+				<td width="35%" align="right">Password</td>
+				<td width="5%"  align="center">:</td>
+				<td width="60%" align="left"></td>
+			</tr>
+			<tr>
+				<td colspan="3"></td>
+			</tr>
+			</tbody>
+		</table>
+		<table width="100%" border="0" cellpadding="3" cellspacing="0" style="border-bottom:1px dashed #a5a5a5;">
+			<tbody>
+			<tr>
+				<td colspan="3" align="left"><h3>Registrasi [STUDENT_TYPE]</h3></td>
+			</tr>
+			<tr>
+				<td width="35%" align="right">Nomor Pendaftaran</td>
+				<td width="5%"  align="center">:</td>
+				<td width="60%" align="left">[REGISTRATION_NUMBER]</td>
+			</tr>
+			<tr>
+				<td align="right">Tanggal Pendaftaran</td>
+				<td align="center">:</td>
+				<td align="left">[CREATED_AT]</td>
+			</tr>
+			<tr><td align="right">Pilihan I</td><td align="center">:</td><td align="left">[FIRST_CHOICE]</td></tr>
+			<tr><td align="right">Pilihan II</td><td align="center">:</td><td align="left">[SECOND_CHOICE]</td></tr>
+			<tr>
+				<td align="right">Nama Lengkap</td>
+				<td align="center">:</td>
+				<td align="left">[FULL_NAME]</td>
+			</tr>
 			<tr>
 				<td align="right">Tempat Tanggal Lahir</td>
 				<td align="center">:</td>
@@ -65,57 +107,6 @@
 			</tr>
 			</tbody>
 		</table>
-		<table width="100%" border="0" cellpadding="3" cellspacing="0" style="padding-top: 50px;">
-				<tbody>
-				<tr>
-					<td align="right">Jalur Pendaftaran</td>
-					<td align="center">:</td>
-					<td align="left">[ADMISSION_TYPE]</td>
-				</tr>
-				<tr>
-					<td width="35%" align="right">Nomor Pendaftaran</td>
-					<td width="5%"  align="center">:</td>
-					<td width="60%" align="left">[REGISTRATION_NUMBER]</td>
-				</tr>
-				<tr>
-					<td align="right">Tanggal Pendaftaran</td>
-					<td align="center">:</td>
-					<td align="left">[CREATED_AT]</td>
-				</tr>
-				<tr><td align="right">Pilihan I</td><td align="center">:</td><td align="left">[FIRST_CHOICE]</td></tr>
-				<tr><td align="right">Pilihan II</td><td align="center">:</td><td align="left">[SECOND_CHOICE]</td></tr>
-				<tr>
-						<td align="right">Nama Lengkap</td>
-						<td align="center">:</td>
-						<td align="left">[FULL_NAME]</td>
-					</tr>
-				<tr>
-				<tr>
-					<td align="right">Tempat Tanggal Lahir</td>
-					<td align="center">:</td>
-					<td align="left">[BIRTH_PLACE], [BIRTH_DATE]</td>
-				</tr>
-				<tr><td align="right">NISN</td><td align="center">:</td><td align="left">[NISN]</td></tr>
-				<tr>
-					<td align="right">Nama Sekolah Asal</td>
-					<td align="center">:</td>
-					<td align="left">[PREV_SCHOOL_NAME]</td>
-				</tr>
-				<tr style="font-weight:bold; border: 1px solid #000000">
-					<td width="35%" align="right"> Username</td>
-					<td width="5%"  align="center">:</td>
-					<td width="60%" align="left">[]</td>
-				</tr>
-				<tr style="font-weight:bold;">
-					<td width="35%" align="right">Password</td>
-					<td width="5%"  align="center">:</td>
-					<td width="60%" align="left">[]</td>
-				</tr>
-				<tr>
-					<td colspan="3"></td>
-				</tr>
-				</tbody>
-			</table>
 		<table width="100%" cellpadding="3" cellspacing="0" border="0">
 			<tbody>
 			<tr>
