menampilkan username & pass di pdf

--- a/views/admission/pdf_admission_template.html
+++ b/views/admission/pdf_admission_template.html
@@ -57,12 +57,12 @@
 			<tr style="font-weight:bold; border: 1px solid #000000">
 				<td width="35%" align="right"> Username</td>
 				<td width="5%"  align="center">:</td>
-				<td width="60%" align="left"></td>
+				<td width="60%" align="left">[USERNAME]</td>
 			</tr>
 			<tr style="font-weight:bold;">
 				<td width="35%" align="right">Password</td>
 				<td width="5%"  align="center">:</td>
-				<td width="60%" align="left"></td>
+				<td width="60%" align="left">[PASSWORD]</td>
 			</tr>
 			<tr>
 				<td colspan="3"></td>
