--- a/views/themes/sky_light/custom.css
+++ b/views/themes/sky_light/custom.css
@@ -41,7 +41,7 @@
 }
 .list-group {
   --bs-list-group-color: #212529;
-  --bs-list-group-bg: green;
+  --bs-list-group-bg: #fff;
   --bs-list-group-border-color: rgba(0, 0, 0, 0.125);
   --bs-list-group-border-width: 1px;
   --bs-list-group-border-radius: 0.375rem;
@@ -53,7 +53,7 @@
   --bs-list-group-action-active-color: #212529;
   --bs-list-group-action-active-bg: #e9ecef;
   --bs-list-group-disabled-color: #6c757d;
-  --bs-list-group-disabled-bg: green;
+  --bs-list-group-disabled-bg: #fff;
   --bs-list-group-active-color: #fff;
   --bs-list-group-active-bg: #0d6efd;
   --bs-list-group-active-border-color: #0d6efd;
