--- a/views/themes/sky_light/custom.scss
+++ b/views/themes/sky_light/custom.scss
@@ -1,6 +1,6 @@
 // Custom.scss
 // Option B: Include parts of Bootstrap
-$list-group-bg: green;
+// $list-group-bg: yellow;
 
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "../../../node_modules/bootstrap/scss/functions";
