--- a/views/themes/sky_light/custom.scss
+++ b/views/themes/sky_light/custom.scss
@@ -42,3 +42,13 @@
 .container {
     max-width: 460px;
 }
+
+.jurusan-rpl {
+    background-image: url('https://ppdbmusaka.com/assets/images/mbr-1-1920x1280.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
+    font-family: 'Jost', sans-serif;
+    // opacity: 0.8;
+    // z-index: 0;
+}
