--- a/views/themes/sky_light/custom.scss
+++ b/views/themes/sky_light/custom.scss
@@ -38,17 +38,34 @@
 //     xl: 1140px,
 //     xxl: 1320px
 // );
+// * {
+//     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+// }
 
 .container {
     max-width: 460px;
 }
 
 .jurusan-rpl {
-    background-image: url('https://ppdbmusaka.com/assets/images/mbr-1-1920x1280.jpg');
+    background-image: url('../../../assets/img/bg-rpl.webp');
     background-repeat: no-repeat;
     background-size: cover;
     height: auto;
     font-family: 'Jost', sans-serif;
     // opacity: 0.8;
     // z-index: 0;
+}
+.jurusan-tkj {
+    background-image: url('../../../assets/img/bg-tkj.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
+    font-family: 'Jost', sans-serif;
+}
+.jurusan-mm {
+    background-image: url('../../../assets/img/bgdkv.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
+    font-family: 'Jost', sans-serif;
 }
