--- a/views/themes/sky_light/custom.scss
+++ b/views/themes/sky_light/custom.scss
@@ -38,8 +38,10 @@
 //     xl: 1140px,
 //     xxl: 1320px
 // );
+
 // * {
-//     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+//     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+//     font-family: Century Gothic, 'Trebuchet MS', sans-serif;
 // }
 
 .container {
@@ -48,6 +50,7 @@
 
 .jurusan-rpl {
     background-image: url('../../../assets/img/bg-rpl.webp');
+    // background-image: url('https://www.spartacom.co.id/wp-content/uploads/2020/03/layar.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: auto;
@@ -64,6 +67,41 @@
 }
 .jurusan-mm {
     background-image: url('../../../assets/img/bgdkv.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
+    font-family: 'Jost', sans-serif;
+}
+.jurusan-otkp {
+    background-image: url('../../../assets/img/bgotkp.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
+    font-family: 'Jost', sans-serif;
+}
+.jurusan-tbs {
+    background-image: url('../../../assets/img/bgtbs.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
+    font-family: 'Jost', sans-serif;
+}
+.jurusan-bdp {
+    background-image: url('../../../assets/img/bgpm.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
+    font-family: 'Jost', sans-serif;
+}
+.jurusan-akl {
+    background-image: url('../../../assets/img/bgakl.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
+    font-family: 'Jost', sans-serif;
+}
+.jurusan-tbg {
+    background-image: url('../../../assets/img/bgtbg.webp');
     background-repeat: no-repeat;
     background-size: cover;
     height: auto;
