--- a/views/themes/sky_light/custom.scss
+++ b/views/themes/sky_light/custom.scss
@@ -107,3 +107,13 @@
     height: auto;
     font-family: 'Jost', sans-serif;
 }
+
+.pendidik {
+    position: absolute;
+    z-index: 99;
+    margin: 0 auto;
+    left: 0;
+    right: 0;        
+    text-align: center;
+    top: 90%
+}
